# workflow-engine

./: .gitignore  README.md  how-it-works.html  index.html  proto-2x2.html  proto-compose.html  proto-home.html  proto-library.html  pyproject.toml  visual.html
deploy/: Dockerfile  README.md  docker-compose.yml
docs/: RESULTS.md  SPEC.md  control-flow.md  cost-model.md  depth.md  glossary.md  known-issues.md  learning-loop.md  portfolio.md  route-contested-candidates.md  visualization.md
engine/: __init__.py  autotest.py  cli.py  composer.py  costs.py  drafting.py  examples.py  explorer.py  explorer_engine.html  fewshot.py  graph_core.js  registry.py  replay.py  scope.py  trainer.py  view.py
engine/core/: __init__.py  board.py  brain.py  conditions.py  contract.py  dataflow.py  dispatcher.py  recipe.py  specialist.py  trace.py  validator.py
engine/recipes/: __init__.py  content.py  refine.py  review.py  triage.py
engine/specialists/: __init__.py  _util.py  act.py  classify.py  fetch.py  (+6 more)
evals/: examples_eval.py  suite.py
examples/: README.md  hello_world.py  learning_loop_demo.py  proof_shared.py  relabel_write_voice.py  tailored_voice_demo.py
tests/: run_all.py  test_concurrency.py  test_control_flow.py  test_core.py  test_dataflow.py  test_drafting_selftest.py  test_examples_scope.py  test_examples_smoke.py  test_exemplar_config.py  test_fewshot_policy.py  test_pipelining.py  test_tailored_weight.py  test_validator.py
tools/: README.md  build_explorer.py  build_gallery.py  deploy.sh  harvest_respond_voice.py
usecases/: index.html  usecases.json
(+73 files in other folders)
